--- a/templates/recipe/accueil.html
+++ b/templates/recipe/accueil.html
@@ -17,11 +17,9 @@
                             <div class="single_home_slider">
                                 <div class="main_home wow fadeInUp" data-wow-duration="700ms">
                                     <h1>Cook' iT</h1>
-                                    <p class="subtitle">Découvir, Cuisiner, Savourer</p>
+                                    <p class="subtitle">Découvrir</p>
 
-                                    <div class="home_btn">
-                                        <a href="" class="btn btn-primary">LEARN MORE</a>
-                                    </div>
+                                    
 
                                 </div>
                             </div>
@@ -30,9 +28,7 @@
                                     <h1>Cook' iT</h1>
                                     <p class="subtitle">Cuisiner</p>
 
-                                    <div class="home_btn">
-                                        <a href="" class="btn btn-primary">LEARN MORE</a>
-                                    </div>
+                                    
 
                                 </div>
                             </div>
@@ -41,9 +37,7 @@
                                     <h1>Cook' iT</h1>
                                     <p class="subtitle">Savourer</p>
 
-                                    <div class="home_btn">
-                                        <a href="" class="btn btn-primary">LEARN MORE</a>
-                                    </div>
+                                  
 
                                 </div>
                             </div>
@@ -58,6 +52,115 @@
 
 
 {% block content %}
+ <div class="main_mix_content text-center padding">
 
+        <div id="mixcontent" class="mixcontent row">
+        {% for recipe in recipes %}
+            <div class="col-md-6 mix cat1">
+                <div class="single_mixi_portfolio margin-bottom-40">
+                    <div class="view hm-zoom">
+           
+                        {% if recipe.image %}
+                        <a href="{% url 'recipe_detail' pk=recipe.pk %}">
+                        {% thumbnail recipe.image  "900x500" crop="center" as im %}
+                            <img src="{{im.url}}" class="img-responsive">
+                        {% endthumbnail %}  
+                        </a>
+                        {% else %}
+                            <a href=""></a>
+                        {% endif %}
+                        <div class="text-floating">
+                            <ul class="list-inline">
+                                <li class="">
+                                    <a class="like " data-recipe-pk="{{recipe.pk}}" type="button"><i class="fa fa-heart cook-second-color" aria-hidden="true"></i></a><span id="count-like-{{recipe.pk}}"> {{recipe.like}}</span>
+                                </li>
+                                <li class=""><a href="#"><i class="fa fa-eye cook-second-color" aria-hidden="true"></i></a><span> {{recipe.view}}</span></li>
+                            </ul>
+                        </div>
+                        <div class="mask flex-center">
+
+                        </div>
+                    </div>
+                   
+                    <div class="single_mixi_portfolio_content">
+                        <a href="{% url 'recipe_detail' pk=recipe.pk %}" class="title">{{recipe.title|truncatechars:20}}</a>
+                        <p>By <a data-toggle="modal" data-target="#modalAvatar{{recipe.author.id}}">{{recipe.author}}</a></p>
+                    </div>
+                   
+                </div>
+            </div>
+
+
+             <!-- Modal -->
+           <div class="modal fade" id="modalAvatar{{recipe.author.id}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel{{recipe.id}}">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            <div class="col-md-4">
+                            
+                            {% if recipe.author.profile.photo %}
+                                <span class="author-inner">
+                                <img src="{{recipe.author.profile.photo.url}}" class="img-responsive img-circle">
+                                </span>
+                                
+                            {% else %}
+                            
+                            <img src="{% static 'img/user-logo.jpg' %}" class="img-responsive" data-pin-nopin="true">
+                            
+                            {% endif %}
+                            <h5 class="">{{recipe.author.first_name}} {{recipe.author.last_name}}</h5>
+                            </div>
+                            <div class="col-md-8">
+                                <p>{{recipe.author.profile.bio}}</p>
+                            </div>
+                        </div>
+                        <!-- <div class="modal-body">
+                        </div> -->
+                        <div class="modal-footer">
+                            <a class="btn-floating btn-sm-full fb-bg"><i class="fa fa-facebook"> </i></a>
+                            <a class="btn-floating btn-sm-full tw-bg"><i class="fa fa-twitter"> </i></a>
+                            <a class="btn-floating btn-sm-full in-bg"><i class="fa fa-instagram"> </i></a>
+                            <a class="btn-floating btn-sm-full gplus-bg"><i class="fa fa-google-plus"> </i></a>
+                            <a class="btn-floating btn-sm-full li-bg"><i class="fa fa-linkedin"> </i></a>
+                            
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+        {% empty %}
+                <h2>No recipe for the moment.</h2>
+        {% endfor %}
+
+        </div>
+    </div>
+
+    <div class="rp-pagination text-center">
+        {% if recipes.has_other_pages %}
+            <ul class="pagination">
+                {% if recipes.has_previous %}
+                  <li><a href="?page={{ recipes.previous_page_number }}">&laquo;</a></li>
+                {% else %}
+                <li class="disabled"><span>&laquo;</span></li>
+                {% endif %}
+                {% for i in recipes.paginator.page_range %}
+                  {% if recipes.number == i %}
+                    <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
+                  {% else %}
+                    <li><a href="?page={{ i }}">{{ i }}</a></li>
+                  {% endif %}
+                {% endfor %}
+                {% if recipes.has_next %}
+                  <li><a href="?page={{ recipes.next_page_number }}">&raquo;</a></li>
+                {% else %}
+                  <li class="disabled"><span>&raquo;</span></li>
+                {% endif %}
+            </ul>
+        {% endif %}
+    </div>
+
+                <!-- End   -->
 
 {% endblock content %}
