--- a/templates/recipe/recipe_add.html
+++ b/templates/recipe/recipe_add.html
@@ -56,7 +56,7 @@
 
 {% block content %}
  <!-- Post -->
-    {% include 'partials/messages.html' %}
+    <!-- {% include 'partials/messages.html' %} -->
     <div class="main_mix_content padding">
 
         <div id="mixcontent" class="mixcontent row">
@@ -77,7 +77,56 @@
                     <form method="POST"  name="add-form" action="{% url 'recipe_add' %}" class="form-block" enctype="multipart/form-data">
                         {% csrf_token %}
                         {{ form.media }}
-                        {{ form.as_p }}
+                       <!--  {{ form.as_p }} -->
+                        <p>
+                            <label>{% trans 'Categorie' %}*</label>
+                            {{form.category}}
+                        </p>
+                         <p>
+                            <label>{% trans 'Origine' %}</label>
+                            {{form.origin}}
+                        </p>
+                        <p>
+                            <label>{% trans 'Nom de la recette' %}*</label>
+                            {{form.title}}
+                        </p>
+                        <p>
+                            <label>{% trans 'Description' %}</label>
+                            {{form.description}}
+                        </p>
+                        <p>
+                            <label>{% trans 'Temps de préparation' %}</label>
+                            {{form.prepare_time}}
+                        </p>
+                        <p>
+                            <label>{% trans 'Temps de cuission' %}</label>
+                            {{form.cooking_time}}
+                        </p>
+                        <p>
+                            <label>{% trans 'Ingrédients' %}*</label>
+                            {{form.ingredient}}
+                        </p>
+                        <p>
+                            <label>{% trans 'Etapes de préparation' %}*</label>
+                            {{form.preparation}}
+                        </p>
+                        <p>
+                            <label>{% trans 'Image' %}*</label>
+                            {{form.image}}
+                        </p>
+                        <p>
+                            <label>{% trans 'Autre image' %}</label>
+                            {{form.image_1}}
+                        </p>
+                        <p>
+                            <label>{% trans 'Autre image' %}</label>
+                            {{form.image_2}}
+                        </p>
+                        <p>
+                            <label>{% trans 'Autre image' %}</label>
+                            {{form.image_3}}
+                        </p>
+
 
                         <button type="submit" class="btn btn-primary">Submit recipe</button>
                     </form>
