--- a/templates/recipe/recipe_box_user.html
+++ b/templates/recipe/recipe_box_user.html
@@ -7,32 +7,38 @@
 {% block slide %}
 
 
-   <section id="home" class="home">
-    
-      <!--   <div class="overlay">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-12 ">
-                        <div class="main_home_slider">
-                            <div class="single_home_slider">
-                                <div class="main_home wow"> -->
-                                    <!-- <h1>Cook' iT</h1> -->
-                                    <img src="{% static 'assets/images/top-user.jpg' %}">
-                                    <!-- <p class="subtitle">Découvir, Cuisiner, Savourer</p>
+   <section id="home" class="home" >
+        <br><br><br><br>
+     
+     <div class="container">   
+        <div class="row padding">
 
-                                    <div class="home_btn">
-                                        <a href="" class="btn btn-primary">LEARN MORE</a>
-                                    </div> -->
-<!-- 
-                                </div>
-                            </div>
-                            
-                            
-                        </div>
-                    </div>
-                </div>
+            <div class="col-md-4">
+
+                <!-- <a class="pull-left" href="">
+                {% if request.user.profile.photo %}
+                    {% thumbnail request.user.profile.photo  "100x100" as im %}
+ 
+                    <img src="{{request.user.profile.photo.url}}" width="" class="img-responsive img-circle">
+                   {% endthumbnail %} 
+                {% else %}
+                    <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20%281%29.jpg" class="media-object img-circle img-responsive">
+                {% endif %}
+                
+                </a> -->
             </div>
-        </div> -->
+            <div class="col-md-8">
+                
+                   <!--  <h3 class="">{{request.user.first_name}} {{request.user.last_name}}</h3>
+                    <p>
+                    {{request.user.profile.bio}}
+                    </p> -->
+                    
+            </div>
+           
+        </div>
+    </div>
+
     </section>
     <!-- <div class="top-user">
         <br>
@@ -85,7 +91,7 @@
                             <tr>
                                 <td> 
                                     <p>Recipes</p>
-                                    <h3>{{recipes.count}}</h3>
+                                    <h3 class="">{{nb}}</h3>
                                 </td>
                                  
                             </tr>
@@ -139,8 +145,8 @@
                 </div>
                 <!-- /.row -->
 
-
-        <div class="text-center">
+        <div class="rp-pagination text-center">
+       
 		{% if recipes.has_other_pages %}
 			<ul class="pagination">
 				{% if recipes.has_previous %}
